--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
             rel="stylesheet"
         />
 
+        <!--    Font Awesome Icons     -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.0.0/css/font-awesome.min.css">
+
         <!--    Favicon                -->
-        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+        <link rel="shortcut icon" href="" type="image/x-icon">
 
         <!--    Glidejs Carousel       -->
         <link 
@@ -37,6 +40,20 @@
         <title>SOUQKOM</title>
     </head>
     <body>
+        <!--    Header                 -->
+        <header class="header" id="header">
+            <!-- Navigation  -->
+            <div class="navigation">
+                <div class="container">
+                    <div class="nav">
+                        <div class="nav__hamburger">
+                            <i class="fas fa-bars"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </header>
+
         <!--    Hero Area              -->
 
         <!--     Glidejs Library       -->
