--- a/index.html
+++ b/index.html
@@ -12,8 +12,23 @@
             rel="stylesheet"
         />
 
+        <link 
+            href="https://fonts.googleapis.com/css2?family=Hachi+Maru
+            +Pop&display=swap" rel="stylesheet"
+        />
+
+        <link 
+            href="https://fonts.googleapis.com/css2?family=Hachi+Maru
+            +Pop&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,
+            500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;
+            1,600;1,700;1,800;1,900&display=swap" rel="stylesheet"
+        />
+
         <!--    Font Awesome Icons     -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.0.0/css/font-awesome.min.css">
+        <link 
+            rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/
+            libs/font-awesome/5.15.3/css/all.min.css"
+        />
 
         <!--    Favicon                -->
         <link rel="shortcut icon" href="" type="image/x-icon">
@@ -21,11 +36,11 @@
         <!--    Glidejs Carousel       -->
         <link 
             rel="stylesheet" 
-            href="node_modules/@glidejs/glide/dist/css/glide.core.min.css"
+            href="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.4.1/css/glide.core.min.css"
         />
 
         <link rel="stylesheet" 
-            href="node_modules/@glidejs/glide/dist/css/glide.theme.min.css"
+            href="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.4.1/css/glide.theme.min.css"
         />
 
         <!--    Animate On Scroll      -->
@@ -34,36 +49,97 @@
             rel="stylesheet"
         />
 
+        <!-- Animate Css -->
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+        />
+
         <!--    StyleSheets            -->
+        <link rel="stylesheet" href="css\normalize.css">
         <link rel="stylesheet" href="./css/style.css">
 
-        <title>SOUQKOM</title>
+
+
+        <title>SOUQNA</title>
     </head>
     <body>
-        <!--    Header                 -->
+        <!--    Start Header           -->
         <header class="header" id="header">
             <!-- Navigation  -->
             <div class="navigation">
                 <div class="container">
-                    <div class="nav">
+                    <nav class="nav">
                         <div class="nav__hamburger">
-                            <i class="fas fa-bars"></i>
+                            <i class="fa fa-bars" aria-hidden="true"></i>
                         </div>
-                    </div>
+
+                        <div class="nav__logo">
+                            <a href="/" class="scroll-link">SOUQNA</a>
+                        </div>
+
+                        <div class="nav__menu">
+                            <div class="menu__top">
+                                <span class="nav__category">Phone</span>
+                                <a href="#" class="close__toggle">
+                                    <i class="fa fa-times" aria-hidden="true" style="font-size: 40px;"></i>
+                                </a>
+                            </div>
+                        </div>
+
+                        <ul class="nav__list">
+                            <li class="nav__item">
+                                <a href="#header" class="nav__link scroll-link">Home</a>
+                            </li>
+
+                            <li class="nav__item">
+                                <a href="#category" class="nav__link scroll-link">Category</a>
+                            </li>
+
+                            <li class="nav__item">
+                                <a href="#news" class="nav__link scroll-link">Blog</a>
+                            </li>
+
+                            <li class="nav__item">
+                                <a href="#contact" class="nav__link scroll-link">Contact</a>
+                            </li>
+                        </ul>
+
+                        <div class="nav__icons">
+                            <a href="#" class="icon__item">
+                                <i class="fa fa-user-o" aria-hidden="true"></i>
+                            </a>
+                            <a href="#" class="icon__item">
+                                <i class="fa fa-search" aria-hidden="true"></i>
+                            </a>
+                            <a href="#" class="icon__item"></a>
+                            <a href="#" class="icon__item"></a>
+                        </div>
+                    </nav>
                 </div>
             </div>
         </header>
 
-        <!--    Hero Area              -->
+        <!--    End Header             -->
+
+        <!--    Start Main             -->
+
+        <!--    End Main               -->
+
+        <!--    Start Footer           -->
+
+        <!--    End Footer             -->
 
         <!--     Glidejs Library       -->
-        <script src="node_modules/@glidejs/glide/dist/glide.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.4.1/glide.min.js"></script>
 
         <!--    AOS Library             -->
         <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
         <!--    script                  -->
         <script src="./js/master.js"></script>
+        <script src="./js/product.js"></script>
+        <script src="./js/slider.js"></script>
 
     </body>
 </html>
